# cmake_match

./: .CMakeLists.txt.swp  2025_matched_data02.txt  2025_matched_data03.txt  CMakeLists.txt  README.md  main.cpp  manage.cpp  readme.txt  student.h  teacher.h
INSTALL/: teacher_test.txt
include/: manage.h  person.h
src/: main.cpp  manage.cpp  student.cpp  teacher.cpp
